--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]--> 
 
-	<link href="http://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet" type="text/css">
 	
 	<meta name="description" content="Full wave high definition vertical seismic profiles" />
 <meta name="keywords" content="HDSC, HDVSP, VSP, vertical seismic profile, high resolution, high definition, full well, borehole, MEMS, wellbore, seismic, downhole, tool, sonde, levels, downhole seismic array, high-definition seismic corporation" />
@@ -35,7 +35,7 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'https://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
@@ -90,7 +90,7 @@
 		<p>
 	<strong>High-Definition Seismic Corporation is pleased to offer HDVSP™ - full wave high definition Vertical Seismic Profiles for shallow plays.</strong></p>
 <p>
-	For over 8 years, HDSC has been the leading provider of high quality VSPs in the Canadian Oil Sands region. Our custom built array was designed to solve the challenge of covering the whole well in one go without <a href="http://hdvsp.com/technical-discussion/#spatial_aliasing">spatial aliasing</a> of the data.</p>
+	For over 8 years, HDSC has been the leading provider of high quality VSPs in the Canadian Oil Sands region. Our custom built array was designed to solve the challenge of covering the whole well in one go without <a href="https://hdvsp.com/technical-discussion/#spatial_aliasing">spatial aliasing</a> of the data.</p>
 <p>
 	The result is data that our clients have described as: "<strong>Spectacular</strong>"; "<strong>The best I have ever seen</strong>"; "<strong>Amazing</strong>", "<strong>Night and day difference</strong> [compared to previous VSPs]".</p>
 <h3>
@@ -148,9 +148,9 @@
 		<div class="left">
 			&copy; copyrights: <a href="index.html" >High Definition Seismic Corporation</a> | 
 			<!--
-			Design by <a target="_blank" href="http://mdesigns.pl">mkopala</a> |
+			Design by <a target="_blank" href="https://mdesigns.pl">mkopala</a> |
 			-->			
-			<a href="http://get-simple.info/" target="_blank" >Powered by  GetSimple</a>		</div>
+			<a href="https://get-simple.info/" target="_blank" >Powered by  GetSimple</a>		</div>
 		
 		<div class="right">
 														</div>
