--- a/index.php@id=news.html
+++ b/index.php@id=news.html
@@ -19,7 +19,7 @@
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]--> 
 
-	<link href="http://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet" type="text/css">
 	
 	<link rel="canonical" href="index.php@id=news.html" />
 
@@ -33,7 +33,7 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'https://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
@@ -148,9 +148,9 @@
 		<div class="left">
 			&copy; copyrights: <a href="index.html" >High Definition Seismic Corporation</a> | 
 			<!--
-			Design by <a target="_blank" href="http://mdesigns.pl">mkopala</a> |
+			Design by <a target="_blank" href="https://mdesigns.pl">mkopala</a> |
 			-->			
-			<a href="http://get-simple.info/" target="_blank" >Powered by  GetSimple</a>		</div>
+			<a href="https://get-simple.info/" target="_blank" >Powered by  GetSimple</a>		</div>
 		
 		<div class="right">
 														</div>
