--- a/index.php@id=technical-discussion.html
+++ b/index.php@id=technical-discussion.html
@@ -19,7 +19,7 @@
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]--> 
 
-	<link href="http://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet" type="text/css">
 	
 	<link rel="canonical" href="index.php@id=technical-discussion.html" />
 
@@ -33,14 +33,14 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'https://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
 </script>
 <!-- end Google Analytics tracking code -->
 
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=TeX-AMS_HTML"></script>
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=TeX-AMS_HTML"></script>
 	
 </head> 
 
@@ -221,9 +221,9 @@
 		<div class="left">
 			&copy; copyrights: <a href="index.html" >High Definition Seismic Corporation</a> | 
 			<!--
-			Design by <a target="_blank" href="http://mdesigns.pl">mkopala</a> |
+			Design by <a target="_blank" href="https://mdesigns.pl">mkopala</a> |
 			-->			
-			<a href="http://get-simple.info/" target="_blank" >Powered by  GetSimple</a>		</div>
+			<a href="https://get-simple.info/" target="_blank" >Powered by  GetSimple</a>		</div>
 		
 		<div class="right">
 														</div>
